Update Ver 0.2.2 Major FIX